perf: Ensure text remain visible during webfont load

--- a/src/main.css
+++ b/src/main.css
@@ -11,69 +11,75 @@
 @font-face {
   font-family: 'GT Eesti Pro Display';
   src: local('GT Eesti Pro Display Thin'), local('GTEestiProDisplay-Thin'),
-      url('./assets/fonts/GTEestiProDisplay-Thin.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-Thin.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'GT Eesti Pro Display';
-  src: url('./assets/fonts/GTEestiProDisplay-Regular.eot');
+  src: url('/fonts/GTEestiProDisplay-Regular.eot');
   src: local('GT Eesti Pro Display Regular'), local('GTEestiProDisplay-Regular'),
-      url('./assets/fonts/GTEestiProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
-      url('./assets/fonts/GTEestiProDisplay-Regular.woff2') format('woff2'),
-      url('./assets/fonts/GTEestiProDisplay-Regular.woff') format('woff'),
-      url('./assets/fonts/GTEestiProDisplay-Regular.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-Regular.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/GTEestiProDisplay-Regular.woff2') format('woff2'),
+      url('/fonts/GTEestiProDisplay-Regular.woff') format('woff'),
+      url('/fonts/GTEestiProDisplay-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'GT Eesti Pro Display';
-  src: url('./assets/fonts/GTEestiProDisplay-RegularItalic.eot');
+  src: url('/fonts/GTEestiProDisplay-RegularItalic.eot');
   src: local('GT Eesti Pro Display Regular Italic'), local('GTEestiProDisplay-RegularItalic'),
-      url('./assets/fonts/GTEestiProDisplay-RegularItalic.eot?#iefix') format('embedded-opentype'),
-      url('./assets/fonts/GTEestiProDisplay-RegularItalic.woff2') format('woff2'),
-      url('./assets/fonts/GTEestiProDisplay-RegularItalic.woff') format('woff'),
-      url('./assets/fonts/GTEestiProDisplay-RegularItalic.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-RegularItalic.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/GTEestiProDisplay-RegularItalic.woff2') format('woff2'),
+      url('/fonts/GTEestiProDisplay-RegularItalic.woff') format('woff'),
+      url('/fonts/GTEestiProDisplay-RegularItalic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'GT Eesti Pro Display';
-  src: url('./assets/fonts/GTEestiProDisplay-Medium.eot');
+  src: url('/fonts/GTEestiProDisplay-Medium.eot');
   src: local('GT Eesti Pro Display Medium'), local('GTEestiProDisplay-Medium'),
-      url('./assets/fonts/GTEestiProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
-      url('./assets/fonts/GTEestiProDisplay-Medium.woff2') format('woff2'),
-      url('./assets/fonts/GTEestiProDisplay-Medium.woff') format('woff'),
-      url('./assets/fonts/GTEestiProDisplay-Medium.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-Medium.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/GTEestiProDisplay-Medium.woff2') format('woff2'),
+      url('/fonts/GTEestiProDisplay-Medium.woff') format('woff'),
+      url('/fonts/GTEestiProDisplay-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'GT Eesti Pro Display';
-  src: url('./assets/fonts/GTEestiProDisplay-Bold.eot');
+  src: url('/fonts/GTEestiProDisplay-Bold.eot');
   src: local('GT Eesti Pro Display Bold'), local('GTEestiProDisplay-Bold'),
-      url('./assets/fonts/GTEestiProDisplay-Bold.eot?#iefix') format('embedded-opentype'),
-      url('./assets/fonts/GTEestiProDisplay-Bold.woff2') format('woff2'),
-      url('./assets/fonts/GTEestiProDisplay-Bold.woff') format('woff'),
-      url('./assets/fonts/GTEestiProDisplay-Bold.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-Bold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/GTEestiProDisplay-Bold.woff2') format('woff2'),
+      url('/fonts/GTEestiProDisplay-Bold.woff') format('woff'),
+      url('/fonts/GTEestiProDisplay-Bold.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'GT Eesti Pro Display';
-  src: url('./assets/fonts/GTEestiProDisplay-UltraBold.eot');
+  src: url('/fonts/GTEestiProDisplay-UltraBold.eot');
   src: local('GT Eesti Pro Display UltraBold'), local('GTEestiProDisplay-UltraBold'),
-      url('./assets/fonts/GTEestiProDisplay-UltraBold.eot?#iefix') format('embedded-opentype'),
-      url('./assets/fonts/GTEestiProDisplay-UltraBold.woff2') format('woff2'),
-      url('./assets/fonts/GTEestiProDisplay-UltraBold.woff') format('woff'),
-      url('./assets/fonts/GTEestiProDisplay-UltraBold.ttf') format('truetype');
+      url('/fonts/GTEestiProDisplay-UltraBold.eot?#iefix') format('embedded-opentype'),
+      url('/fonts/GTEestiProDisplay-UltraBold.woff2') format('woff2'),
+      url('/fonts/GTEestiProDisplay-UltraBold.woff') format('woff'),
+      url('/fonts/GTEestiProDisplay-UltraBold.ttf') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
